--- a/goldford-tellme-viz.html
+++ b/goldford-tellme-viz.html
@@ -12,7 +12,7 @@
     <a id="badge" href="http://www.chromeexperiments.com/experiment/audio-cloud/" 
         target="_blank"><em>&nbsp;Experimental code by André Mattos, revised by Louis Goldford.</em></a>
   
-    <div id="audio-container" data-audio-url="./media/Goldford.TellMe.11b.master.v04.mp3"></div>
+    <div id="audio-container" data-audio-url="./media/Goldford.TellMe.11b.master.v05.reduced.mp3"></div>
   
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js'></script>
