--- a/goldford-tellme-viz.html
+++ b/goldford-tellme-viz.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-    <h2 class="message">PLAY</h2>
+    <h2 class="message">LISTEN</h2>
     <a id="badge" href="http://www.chromeexperiments.com/experiment/audio-cloud/" 
         target="_blank"><em>&nbsp;Experimental code by André Mattos, revised by Louis Goldford.</em></a>
   
